--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css">
 
    <!-- css  -->
-   <link rel="stylesheet" href="css/style.css">
+   <link rel="stylesheet" href="style.css">
 
 </head>
 <body>
@@ -26,7 +26,7 @@
 
 
 <!--  js -->
-<script src="js/script.js"></script>
+<script src="script.js"></script>
 
    
 </body>
